# 0BS1D1VM

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: CONTRIBUTING.md
examples/: basic_usage.py  custom_scorer.py
obsidium/: __init__.py  cli.py
obsidium/agents/: __init__.py
obsidium/campaign/: __init__.py  engine.py
obsidium/core/: __init__.py  config.py  models.py  scenario.py
obsidium/defenses/: __init__.py  layers.py
obsidium/payloads/: __init__.py  library.py
obsidium/reporting/: __init__.py  html_report.py
obsidium/runner/: __init__.py  engine.py
obsidium/scenarios/: __init__.py
obsidium/scoring/: __init__.py  engine.py  scorers.py
obsidium/utils/: __init__.py  retry.py
scenarios/confused-deputy/: email-assistant.yaml
scenarios/cyber/: code-review-backdoor.yaml  incident-response-manipulation.yaml  malware-analysis-escape.yaml  pentest-scope-creep.yaml  soc-alert-triage.yaml  vuln-scanner-overreach.yaml
scenarios/data-exfiltration/: markdown-injection.yaml  side-channel.yaml
scenarios/mcp-exploits/: session-hijack.yaml
scenarios/memory-poisoning/: context-injection.yaml  false-memory-implant.yaml  rag-poisoning.yaml
scenarios/multi-agent/: agent-in-the-middle.yaml  consensus-attack.yaml
scenarios/prompt-injection/: basic-override.yaml  encoding-bypass.yaml  hardened-override.yaml  multilingual-pivot.yaml
scenarios/reasoning-exploitation/: cot-hijack.yaml  hidden-scratchpad.yaml  reasoning-action-gap.yaml
scenarios/supply-chain/: poisoned-rag.yaml
scenarios/system-prompt-extraction/: canary-hunt.yaml
scenarios/tool-poisoning/: dynamic-tool-definitions.yaml  (+1 more)
tests/: test_defenses.py  test_models.py  test_payloads.py  test_scenario.py  test_scorers.py  test_scoring_engine.py
